--- a/StarterTemplate_JS/code.html
+++ b/StarterTemplate_JS/code.html
@@ -1,106 +1,183 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<head>
+    <title>App Name: A Coding Project By Mason Almossa</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Bootstrap CSS & Fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
 
-  <title>App Name: A Coding Project By Mason Almossa</title>
+    <link rel="stylesheet" href="/StarterTemplate_JS/css/site.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/StarterTemplate_JS/img/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="/StarterTemplate_JS/css/prism.css" />
 
-  <!-- Bootstrap CSS & Fontawesome -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script
+      src="https://kit.fontawesome.com/5db21ba9c6.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <link rel="stylesheet" href="/StarterTemplate_JS/css/site.css">
-  <link rel="icon" type="image/png" href="/StarterTemplate_JS/img/favicon-32x32.png">
-  <Link href="/StarterTemplate_JS/css/prism.css" rel="stylesheet">
-
-  <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
-
-</head>
-
-<body class="d-flex flex-column h-100">
-
-  <!-- Navigation Section -->
-  <nav class="navbar navbar-expand-md navbar-dark Fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/StarterTemplate_JS/img/smallLogo_white.png"
-          class="align-text-top mr-2" alt="Mason Almossa Logo">APP NAME</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/StarterTemplate_JS/index.html">
-              Home
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/StarterTemplate_JS/app.html">
-              The App
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/StarterTemplate_JS/code.html">
-              The Code
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" target="_blank" href="#">
-              Git Repo
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" target="_blank" href="#">
-              About
-            </a>
-          </li>
-        </ul>
+  <body class="d-flex flex-column h-100">
+    <!-- Navigation Section -->
+    <nav class="navbar navbar-expand-md navbar-dark Fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img
+            src="/StarterTemplate_JS/img/smallLogo_white.png"
+            class="align-text-top mr-2"
+            alt="Mason Almossa Logo"
+          />APP NAME</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/StarterTemplate_JS/index.html">
+                Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/StarterTemplate_JS/app.html">
+                The App
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/StarterTemplate_JS/code.html"
+              >
+                The Code
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="#"> Git Repo </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="#"> About </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!-- Main Section -->
-  <main class="flex-shrink-0">
-    <div class="container"></div>
-  </main>
-
-
-
-  <!--Footer Section -->
-  <footer class="footer mt-auto py-3">
-    <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-lg-3 gy-2">
-        <div
-          class="col order-last order-lg-first text-light d-flex align-items-center justify-content-center justify-content-lg-start">
-          <div><span class="text-muted">&copy;2023</span> Mason Almossa | malmossa@gmail.com</div>
-        </div>
-        <div class="col d-flex align-items-center justify-content-center">
-          <img src="/StarterTemplate_JS/img/masonCoder_white.png" alt="Mason Almossa Logo">
-        </div>
-        <div class="col d-flex align-items-center justify-content-center justify-content-lg-end">
-          <div class="row">
-            <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-            <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-            <div class="col social"><a href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div>
-            <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+    <!-- Main Section -->
+    <main class="flex-shrink-0">
+      <div class="container py-5 px-5 mt-5">
+        <h2 class="border-1 border-bottom border-dark">
+          The Code for APP NAME
+        </h2>
+        <div class="row row-cols-1 row-cols-lg-2">
+          <div class="col-lg-8">
+            <pre class="line-numbers">
+              <code class="language-javascript">
+                // call hello world
+                function Helloworld() {
+                alert("Hello World!!");
+                }
+              </code>
+            </pre>
+          </div>
+          <div class="col-lg-4">
+            <p>The code is structed in one function.</p>
+            <h5>Hello World</h5>
+            <p>
+              Hello world is a function that displays an alert with a message of
+              "Hello World"
+            </p>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </main>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+    <!--Footer Section -->
+    <footer class="footer mt-auto py-3">
+      <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-lg-3 gy-2">
+          <div
+            class="col order-last order-lg-first text-light d-flex align-items-center justify-content-center justify-content-lg-start"
+          >
+            <div>
+              <span class="text-muted">&copy;2023</span> Mason Almossa |
+              malmossa@gmail.com
+            </div>
+          </div>
+          <div class="col d-flex align-items-center justify-content-center">
+            <img
+              src="/StarterTemplate_JS/img/masonCoder_white.png"
+              alt="Mason Almossa Logo"
+            />
+          </div>
+          <div
+            class="col d-flex align-items-center justify-content-center justify-content-lg-end"
+          >
+            <div class="row">
+              <div class="col social">
+                <a href="#" target="_blank"
+                  ><i class="fab fa-linkedin fa-2x"></i
+                ></a>
+              </div>
+              <div class="col social">
+                <a href="#" target="_blank"
+                  ><i class="fab fa-github fa-2x"></i
+                ></a>
+              </div>
+              <div class="col social">
+                <a href="#" target="_blank"
+                  ><i class="fab fa-youtube fa-2x"></i
+                ></a>
+              </div>
+              <div class="col social">
+                <a href="#" target="_blank"
+                  ><i class="fab fa-twitter fa-2x"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-
-</body>
-
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/StarterTemplate_JS/js/prism.js"></script>
+    <script>
+      Prism.plugins.NormalizeWhitespace.setDefaults({
+        "remove-trailing": true,
+        "remove-indent": true,
+        "left-trim": true,
+        "right-trim": true,
+      });
+    </script>
+  </body>
 </html>
