--- a/BootstrapGrids/Grid3.html
+++ b/BootstrapGrids/Grid3.html
@@ -62,10 +62,47 @@
   </nav>
 
   <main class="flex-shrink-0">
-    <div class="container">
+    <div class="container h-100 minHeight">
+      <div class="row h-100">
+        <!-- lift column -->
+        <div class="col-7">
+          <div class="bg-secondary text-light p-2 h-100">
+            <h1>Article Title</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt recusandae aperiam eligendi est
+              voluptas cum quas velit, reprehenderit laborum vel minus obcaecati hic iure autem? Voluptate quos illo
+              magni rerum, voluptatibus nulla! Blanditiis magni illo mollitia dolores soluta, at sapiente corporis
+              dignissimos necessitatibus. Exercitationem molestias obcaecati ad natus, ipsam tenetur.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt recusandae aperiam eligendi est
+              voluptas cum quas velit, reprehenderit laborum vel minus obcaecati hic iure autem? Voluptate quos illo
+              magni rerum, voluptatibus nulla! Blanditiis magni illo mollitia dolores soluta, at sapiente corporis
+              dignissimos necessitatibus. Exercitationem molestias obcaecati ad natus, ipsam tenetur.</p>
+          </div>
+        </div>
 
+        <!-- right column -->
+        <div class="col-5 h-100 d-flex flex-column justify-content-evenly">
+          <!-- right top column -->
+          <div class="bg-dark text-light h-50 p-2">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo earum eaque modi voluptate. Aspernatur
+              assumenda, eius numquam sit incidunt error quibusdam, tenetur ducimus velit optio fugit, non accusamus id
+              amet accusantium totam ipsa eos iusto sunt explicabo odit ab laborum cum? Quam sint perferendis rerum ea
+              vero, dignissimos ipsa quos.</p>
+          </div>
+          <!-- right bottom column -->
+          <div class="bg-dark text-light h-50 mt-2 p-2">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus sed esse minima saepe error ipsam
+              sequi enim ex amet! Officiis nesciunt mollitia dignissimos aspernatur animi dolore numquam rem, suscipit
+              qui quia laudantium laborum facere, totam error ea obcaecati eius perferendis unde culpa repellendus harum
+              quas! Dolore ab quis molestiae aliquid!</p>
+          </div>
+          <div class="bg-dark text-light border border-top p-2">
+            <button class="btn btn-light" type="button">Read More</button>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
+
   <footer class="footer mt-auto py-3 bg-dark sticky-footer">
     <div class="container-fluid text-center text-white">
       <span class="text-muted">Bootstrap Grids - by Mansor Almossa.</span>
