--- a/BootstrapGrids/Grid1.html
+++ b/BootstrapGrids/Grid1.html
@@ -66,12 +66,12 @@
       <div class="row row-cols-1 row-cols-md-2 gy-2 h-100">
         <div class="col">
           <div class="bg-dark text-light h-100 p-2">
-            <h3>COL ONE</h3>
+            <h5>Col One</h5>
           </div>
         </div>
         <div class="col">
           <div class="bg-secondary text-light h-100 p-2">
-            <h3>COL TWO</h3>
+            <h5>Col Two</h5>
           </div>
         </div>
       </div>
