--- a/BootstrapGrids/Grid3b.html
+++ b/BootstrapGrids/Grid3b.html
@@ -65,10 +65,10 @@
     <div class="container h-100 minHeight">
       <ul class="nav nav-pills mb-1">
         <li class="nav-item">
-          <a href="/BootstrapGrids/Grid3.html" class="nav-link active">Grid 3</a>
+          <a href="/BootstrapGrids/Grid3.html" class="nav-link">Grid 3</a>
         </li>
         <li class="nav-item">
-          <a href="/BootstrapGrids/Grid3b.html" class="nav-link">Grid 3B</a>
+          <a href="/BootstrapGrids/Grid3b.html" class="nav-link active">Grid 3B</a>
         </li>
       </ul>
       <div class="row h-100">
@@ -88,23 +88,28 @@
         </div>
 
         <!-- right column -->
-        <div class="col-5 h-100 d-flex flex-column justify-content-evenly">
+        <div class="col-5">
           <!-- right top column -->
-          <div class="bg-dark text-light h-50 p-2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo earum eaque modi voluptate. Aspernatur
-              assumenda, eius numquam sit incidunt error quibusdam, tenetur ducimus velit optio fugit, non accusamus id
-              amet accusantium totam ipsa eos iusto sunt explicabo odit ab laborum cum? Quam sint perferendis rerum ea
-              vero, dignissimos ipsa quos.</p>
+          <div class="bg-secondary text-light p-2">
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="search" aria-label="search">
+              <button class="btn btn-outline-light" type="submit">search</button>
+            </form>
           </div>
           <!-- right bottom column -->
-          <div class="bg-dark text-light h-50 mt-2 p-2">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus sed esse minima saepe error ipsam
-              sequi enim ex amet! Officiis nesciunt mollitia dignissimos aspernatur animi dolore numquam rem, suscipit
-              qui quia laudantium laborum facere, totam error ea obcaecati eius perferendis unde culpa repellendus harum
-              quas! Dolore ab quis molestiae aliquid!</p>
-          </div>
-          <div class="bg-dark text-light border border-top p-2">
-            <button class="btn btn-light" type="button">Read More</button>
+          <div class="bg-dark text-light mt-2 p-2">
+            <h5>More Articles</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Article One</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Article Two</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Article Tree</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
