--- a/BootstrapGrids/Grid4.html
+++ b/BootstrapGrids/Grid4.html
@@ -62,8 +62,24 @@
   </nav>
 
   <main class="flex-shrink-0">
-    <div class="container">
-
+    <div class="container h-100 minHeight">
+      <div class="row h-100 row-cols-1 row-cols-md-3 gy-1">
+        <div class="col">
+          <div class="bg-secondary text-light h-100">
+            Col One
+          </div>
+        </div>
+        <div class="col">
+          <div class="bg-dark text-light h-100">
+            Col Two
+          </div>
+        </div>
+        <div class="col">
+          <div class="bg-secondary text-light h-100">
+            Col Tree
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="footer mt-auto py-3 bg-dark sticky-footer">
