--- a/BootstrapGrids/Grid7.html
+++ b/BootstrapGrids/Grid7.html
@@ -62,7 +62,7 @@
   </nav>
 
   <main class="flex-shrink-0">
-    <div class="container">
+    <div class="container-fluid h-100 minHeight">
 
     </div>
   </main>
