--- a/BootstrapGrids/Grid7.html
+++ b/BootstrapGrids/Grid7.html
@@ -63,7 +63,23 @@
 
   <main class="flex-shrink-0">
     <div class="container-fluid h-100 minHeight">
-
+      <div class="row h-100 gy-2 row-cols-1 row-cols-md-2">
+        <div class="col-md-12">
+          <div class="bg-secondary h-100 text-light">
+            <h5>Col One</h5>
+          </div>
+        </div>
+        <div class="col-md-6 order-last">
+          <div class="bg-dark h-100 text-light">
+            <h5>Col Two</h5>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="bg-secondary h-100 text-light">
+            <h5>Col Tree</h5>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="footer mt-auto py-3 bg-dark sticky-footer">
