--- a/BootstrapGrids/Grid9.html
+++ b/BootstrapGrids/Grid9.html
@@ -62,8 +62,34 @@
   </nav>
 
   <main class="flex-shrink-0">
-    <div class="container">
-
+    <div class="container-fluid h-100 minHeight">
+      <div class="row h-100 gy-2 row-cols-1 row-cols-md-2">
+        <div class="col-md-12">
+          <div class="bg-secondary h-100 text-light">
+            <h5>Col One</h5>
+          </div>
+        </div>
+        <div class="col-6 col-md-3 order-last">
+          <div class="bg-dark h-100 text-light">
+            <h5>Col Two</h5>
+          </div>
+        </div>
+        <div class="col-6 col-md-3">
+          <div class="bg-secondary h-100 text-light">
+            <h5>Col Tree</h5>
+          </div>
+        </div>
+        <div class="col-6 col-md-3">
+          <div class="bg-secondary h-100 text-light">
+            <h5>Col Tree</h5>
+          </div>
+        </div>
+        <div class="col-6 col-md-3">
+          <div class="bg-secondary h-100 text-light">
+            <h5>Col Tree</h5>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="footer mt-auto py-3 bg-dark sticky-footer">
