--- a/Bootstrap_Invoice/index.html
+++ b/Bootstrap_Invoice/index.html
@@ -12,8 +12,41 @@
 </head>
 
 <body>
-  <div class="container">
-
+  <div class="container rounded p-2 border border-1">
+    <div class="d-flex justify-content-end mt-3">
+      <button type="button" class="btn btn-dark" onclick="window.print()">Print this page</button>
+    </div>
+    <div class="row align-items-center">
+      <div class="col-sm-7 d-flex justify-content-start">
+        <img src="/Bootstrap_Invoice/img/IdeaFoundryLogo.png" title="Idea Foundry Logo" alt="Idea Foundry Logo" />
+      </div>
+      <div class="col-sm-5 d-flex justify-content-sm-end justify-content-start">
+        <strong>Customer:</strong>&nbsp;4908
+      </div>
+    </div>
+    <hr>
+    <div class="row row-cols-1 row-cols-sm-2">
+      <div class="col-sm-6 d-flex justify-content-start">
+        <strong>Date:</strong>&nbsp;7/26/2023
+      </div>
+      <div class="col-sm-6 d-flex justify-content-sm-end justify-content-start">
+        <strong>Invoice No:</strong>&nbsp;19005
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col d-flex justify-content-start">
+        <div>
+          <strong>Invoice To:</strong><br>
+          <address>
+            Mark Davis <br>
+            3333 Al Davis Way <br>
+            Las Vegas, NV 89118
+          </address>
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
   </div>
 
 
