--- a/Bootstrap_Invoice/index.html
+++ b/Bootstrap_Invoice/index.html
@@ -2,60 +2,132 @@
 <html lang="en">
 
 <head>
-  <title>Invoice From Idea Foundry</title>
+  <title>Invoice Template</title>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Bootstrap_Invoice/css/site.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link href="css/site.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container rounded p-2 border border-1">
-    <div class="d-flex justify-content-end mt-3">
-      <button type="button" class="btn btn-dark" onclick="window.print()">Print this page</button>
+  <div class="container border rounded border-1 p-2"> <!--Surrounding rounded border for the invoice-->
+    <div class="d-flex justify-content-end d-print-none"> <!--d-print-none removes button from print preview-->
+      <!--onclick="window.print()" allows for us to bring up print page to print invoice template-->
+      <button type="button" class="btn-dark" onclick="window.print()">Print this page</button>
     </div>
     <div class="row align-items-center">
       <div class="col-sm-7 d-flex justify-content-start">
-        <img src="/Bootstrap_Invoice/img/IdeaFoundryLogo.png" title="Idea Foundry Logo" alt="Idea Foundry Logo" />
+        <img src="/Bootstrap_Invoice/img/IdeaFoundryLogo.png" title="Idea Foundry Logo"
+          alt="Idea Foundry: we make ideas into reality" class="img-fluid">
       </div>
-      <div class="col-sm-5 d-flex justify-content-sm-end justify-content-start">
-        <strong>Customer:</strong>&nbsp;4908
+      <div class=" col-sm-5 d-flex justify-content-sm-end justify-content-start">
+        <!--<h6><strong>Client No: 4902</strong></h6>-->
+        <strong>Client:</strong>&nbsp;05839
       </div>
     </div>
     <hr>
     <div class="row row-cols-1 row-cols-sm-2">
       <div class="col-sm-6 d-flex justify-content-start">
-        <strong>Date:</strong>&nbsp;7/26/2023
+        <!--<p><strong>Date: </strong>05/17/19</p>     nbsp; non breaking space works better-->
+        <strong>Date:</strong>&nbsp;05/17/19
       </div>
-      <div class="col-sm-6 d-flex justify-content-sm-end justify-content-start">
-        <strong>Invoice No:</strong>&nbsp;19005
+      <div class="col-12 col-md-6 d-flex justify-content-sm-end justify-content-start">
+        <!--<p><strong>Invoice No: </strong>060432</p>-->
+        <strong>Invoice No:</strong>&nbsp;0901
       </div>
     </div>
     <hr>
-    <div class="row">
-      <div class="col d-flex justify-content-start">
-        <div>
+    <div class="row row-cols-sm-2 row-cols-1">
+      <div class="col-6 d-flex justify-content-start">
+        <div> <!-- div wrapper around header and address to make content stack properly-->
           <strong>Invoice To:</strong><br>
-          <address>
-            Mark Davis <br>
-            3333 Al Davis Way <br>
-            Las Vegas, NV 89118
+          <address class="address">Jessica Peterson<br>
+            108 Dog Lane Way<br>
+            Las Vegas, NV 77432
           </address>
         </div>
       </div>
-      <div class="col"></div>
+      <div class="col-6 d-flex justify-content-end">
+        <div>
+          <strong>Pay To:</strong><br>
+          <address class="address">Idea Foundry Inc.<br>
+            1044 N. Enterprise St<br>
+            Houston, TX 55344
+          </address>
+        </div>
+      </div>
     </div>
+    <div class="table-responsive-sm">
+      <table class="table table-striped table-bordered">
+        <!--<caption class="border p-2"><strong>NOTE: </strong>
+                    This is a computer generated receipt and does not require a physical signature.
+                    </caption>-->
+        <thead>
+          <tr>
+            <th>Service</th>
+            <th>Description</th>
+            <th>Rate</th>
+            <th>QTY</th>
+            <th class="text-end">Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Design</td>
+            <td>Website Design</td>
+            <td>$60.00</td>
+            <td>10</td>
+            <td class="text-end">$600.00</td>
+          </tr>
+          <tr>
+            <td>Development</td>
+            <td>Website Development</td>
+            <td>$150.00</td>
+            <td>30</td>
+            <td class="text-end">$1,500.00</td>
+          </tr>
+          <tr>
+            <td>Deployment</td>
+            <td>Deployment and Hosting</td>
+            <td>$450.00</td>
+            <td>1</td>
+            <td class="text-end">$450.00</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="4">SubTotal: </td>
+            <td class="text-end">$2,550.00</td>
+          </tr>
+          <tr>
+            <td colspan="4">Tax: </td>
+            <td class="text-end">$0.00</td>
+          </tr>
+          <tr>
+            <td colspan="4">Total: </td>
+            <td class="text-end">$2,550.00</td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+    <footer>
+      <div class="row">
+        <div class="col-12">
+          <p><strong>NOTE: </strong>&nbsp;This is a computer generated receipt and does not require a physical
+            signature.</p>
+        </div>
+      </div>
+    </footer>
   </div>
 
-
-
-
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
