--- a/StarterTemplate_JS/index.html
+++ b/StarterTemplate_JS/index.html
@@ -10,16 +10,19 @@
 
   <title>App Name: A Coding Project By Mason Almossa</title>
 
-  <!-- Bootstrap core CSS -->
+  <!-- Bootstrap CSS & Fontawesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
   <link rel="stylesheet" href="/StarterTemplate_JS/css/site.css">
+
+  <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body class="d-flex flex-column h-100">
 
-  <!-- Navigation -->
+  <!-- Navigation Section -->
   <nav class="navbar navbar-expand-md navbar-dark Fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">APP NAME</a>
@@ -69,9 +72,26 @@
     </div>
   </main>
 
+  <!--Footer Section -->
   <footer class="footer mt-auto py-3">
-    <div class="container-fluid text-center">
-      <span class="text-muted">Place sticky footer coontent here.</span>
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-lg-3 gy-2">
+        <div
+          class="col order-last order-lg-first text-light d-flex align-items-center justify-content-center justify-content-lg-start">
+          <div><span class="text-muted">&copy;2023</span> Mason Almossa | malmossa@gmail.com</div>
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <img src="/StarterTemplate_JS/img/masonCoder_white.png" alt="Mason Almossa Logo">
+        </div>
+        <div class="col d-flex align-items-center justify-content-center justify-content-lg-end">
+          <div class="row">
+            <div class="col social"><a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+            <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+            <div class="col social"><a href="#" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></div>
+            <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+          </div>
+        </div>
+      </div>
     </div>
   </footer>
 
