--- a/StarterTemplate_JS/index.html
+++ b/StarterTemplate_JS/index.html
@@ -15,6 +15,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
   <link rel="stylesheet" href="/StarterTemplate_JS/css/site.css">
+  <link rel="icon" type="image/png" href="/StarterTemplate_JS/img/favicon-32x32.png">
 
   <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
@@ -25,7 +26,8 @@
   <!-- Navigation Section -->
   <nav class="navbar navbar-expand-md navbar-dark Fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">APP NAME</a>
+      <a class="navbar-brand" href="#"><img src="/StarterTemplate_JS/img/smallLogo_white.png"
+          class="align-text-top mr-2" alt="Mason Almossa Logo">APP NAME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
