--- a/StarterTemplate_JS/index.html
+++ b/StarterTemplate_JS/index.html
@@ -66,11 +66,40 @@
 
   <!-- Main Section -->
   <main class="flex-shrink-0">
-    <div class="container">
-      <h2>Template with dark fixed navbar and sticky footer</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio assumenda sint commodi. Distinctio beatae vel
-        tempore, iusto blanditiis molestias, ratione nisi aliquam, nobis commodi doloremque possimus officiis aut? Est,
-        sapiente.</p>
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
+        <div class="col order-last order-lg-first">
+          <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
+          <h4 class="lead">Live life one loop at a time. A JavaScript exercise using loops. Write a program the displays
+            the numbers from 0 to 100. Display the even numbers in <strong>BOLD</strong></h4>
+          <ul class="fa-ul pt-2 checklist">
+            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
+            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Fundamentals</li>
+            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Loops</li>
+            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Functions</li>
+            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript DOM Manipulation</li>
+            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript If/Then/Else</li>
+            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript Boolean Logic</li>
+          </ul>
+          <div>
+            <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="/StarterTemplate_JS/app.html">Try It
+              Out!</a>
+          </div>
+          <h5 class="fw-bold mt-5">
+            <div class="d-flex">
+              <div class="row">
+                <div class="col"><i class="fab fa-js-square fa-3x jsicon"></i></div>
+                <div class="col"><i class="fab fa-bootstrap fa-3x bsicon"></i></div>
+                <div class="col"><i class="fab fa-html5 fa-3x html5icon"></i></div>
+                <div class="col"><i class="fab fa-css3-alt fa-3x cssicon"></i></div>
+              </div>
+            </div>
+          </h5>
+        </div>
+        <div class="col">
+          <img src="/StarterTemplate_JS/img/tempLogo.png" class="img-fluid center-block d-block mx-auto" alt="App Logo">
+        </div>
+      </div>
     </div>
   </main>
 
