--- a/StarterTemplate_JS/index.html
+++ b/StarterTemplate_JS/index.html
@@ -40,7 +40,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/StarterTemplate_JS/app.html">
+            <a class="nav-link" href="/StarterTemplate_JS/app.html">
               The App
             </a>
           </li>
@@ -130,7 +130,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
-  <script src="/StarterTemplate_JS/js/site.js"></script>
+
 
 </body>
 
