--- a/StarterTemplate_JS/code.html
+++ b/StarterTemplate_JS/code.html
@@ -16,6 +16,7 @@
 
   <link rel="stylesheet" href="/StarterTemplate_JS/css/site.css">
   <link rel="icon" type="image/png" href="/StarterTemplate_JS/img/favicon-32x32.png">
+  <Link href="/StarterTemplate_JS/css/prism.css" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
