--- a/Hundo_JS/app.html
+++ b/Hundo_JS/app.html
@@ -83,12 +83,11 @@
             <h5>Enter Values</h5>
             <form class="row gy-2 gx-3">
               <div class="col">
-                <input id="startValue" type="number" class="form-control" placeholder="Start Value" value=0
+                <input id="startValue" type="number" class="form-control" placeholder="Start Value"
                   aria-label="Start Value">
               </div>
               <div class="col">
-                <input id="endValue" type="number" class="form-control" placeholder="End Value" value=100
-                  aria-label="End Value">
+                <input id="endValue" type="number" class="form-control" placeholder="End Value" aria-label="End Value">
               </div>
               <div class="col-12 d-flex justify-content-end mt-2">
                 <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">Display the Hondu</button>
