--- a/Hundo_JS/code.html
+++ b/Hundo_JS/code.html
@@ -68,10 +68,49 @@
         <div class="col-lg-8">
           <pre class="line-numbers">
               <code class="language-javascript">
-                // call hello world
-                function Helloworld() {
-                alert("Hello World!!");
-                }
+                // all selectors
+                let startInput = document.getElementById("startValue");
+                let endInput = document.getElementById("endValue");
+                let button = document.getElementById("btnSubmit");
+                let table = document.getElementById("results");
+
+                // event listener
+                button.addEventListener("click", displayNumbers);
+
+                function generateNumbers() {
+                let startValue = parseInt(startInput.value);
+                let endValue = parseInt(endInput.value);
+
+                let numbers = [];
+
+                if (Number.isInteger(startValue) && Number.isInteger(endValue)) {
+                for (let i = startValue; i <= endValue; i++) {
+                  numbers.push(i);
+                    }
+                  } else
+                  {
+                    alert("Please enter a number!");
+                  }
+                  return numbers;
+                  }
+                  function displayNumbers() {
+                  let numbers=generateNumbers();
+                  let templateRows="";
+                  for (let i=0; i <numbers.length; i++) {
+                  let number=numbers[i];
+
+                  if (number % 2==0) { templateRows +=`<tr>
+                  <td><strong>${number}</strong></td>
+                  </tr>`;
+                  } else {
+                  templateRows += `<tr>
+                    <td>${number}</td>
+                  </tr>`;
+                  }
+                  }
+
+                  table.innerHTML = templateRows;
+                  }
               </code>
             </pre>
         </div>
